# uav_landing

./: CMakeLists.txt  README.md  frames.gv  package.xml  read
launch/: hector_helipad_individual.launch  main.launch  outdoor_flight_gazebo.launch  rosplay.launch  visual_odometry.launch
rviz_cfg/: rviz_config.rviz
src/: alvar_trackop.py  camera_feed_processor.py  controller.py  controller1.py  count_successful.py  estimate_pad_velocity.py  exploration_node.py  moving_helipad.py  pid_tuner.py  plot.py  remap.py  sensor_fusion.py  target_move.py
urdf/: laser_and_cam.gazebo.xacro  laser_and_cam.urdf.xacro
videos/: sqaure motion.webm
worlds/: hecto.world  hector_obstacles.world  simple_city.world  simplified.world
